--- a/books.html
+++ b/books.html
@@ -100,7 +100,12 @@
   </main>
 
   <script src="books.js"></script>
-  <a href="index.html" class="btn">الجدول المساعد 🗓️</a>
+
+  <nav class="main-nav">
+  
+  <a href="index.html"> 📅 الجدول المساعد</a>
+</nav>
+
 
 </body>
 </html>
