--- a/index.html
+++ b/index.html
@@ -78,7 +78,15 @@
 
   <script src="data.js"></script>
   <script src="script.js"></script>
-  <a href="books.html" class="btn"> الكتب 📚</a>
+
+ <nav class="main-nav">
+  
+  <a href="books.html">📚 الكتب</a>
+</nav>
+
+
+
+
 
 </body>
 </html>
